Fixed bugs with image expanding and collapsing

--- a/static/CSS/Pages/shop.css
+++ b/static/CSS/Pages/shop.css
@@ -161,17 +161,16 @@
 .products .card.active .img-cont {
   position: relative;
   width: 100%;
-  height: 200px;
 }
 
-.products .card .img-cont div {
+.products .card .img-cont #expand {
   display: none;
 }
 
-.products .card.active .img-cont div {
+.products .card.active .img-cont #expand {
   display: block;
   position: absolute;
-  bottom: 1rem;
+  bottom: -2rem;
   right: 1rem;
 }
 
